myteo/test/analyze/type_check/function_params.exp
Error: Expected type `bool` but found `unit`
test/analyze/type_check/function_params.myte:14:3-5
 14 |   (p1: bool);
    |    ^^

Error: Expected type `int -> bool` but found `(int, string) -> bool`
test/analyze/type_check/function_params.myte:15:3-5
 15 |   (p4: int -> bool);
    |    ^^

Error: Expected type `unit` but found `int`
test/analyze/type_check/function_params.myte:16:3-5
 16 |   (p5: unit);
    |    ^^

Error: Expected type `unit` but found `int`
test/analyze/type_check/function_params.myte:20:5-7
 20 |     (p1: unit);
    |      ^^

Error: Expected type `unit` but found `string`
test/analyze/type_check/function_params.myte:23:7-9
 23 |       (p1: unit);
    |        ^^

Error: Expected type `int` but found `string`
test/analyze/type_check/function_params.myte:24:7-9
 24 |       (p1: int);
    |        ^^