myteo/test/analyze/type_check/function_params.myte
module Test

type IntAlias = int

fun foo(p1: unit, p2: int, p3: string, p4: (int, string) => bool, p5: IntAlias) {
  (p1: unit);
  (p2: int);
  (p2: IntAlias);
  (p3: string);
  (p4: (int, string) => bool);
  (p5: IntAlias);
  (p5: int);

  (p1: bool);
  (p4: int => bool);
  (p5: unit);

  {
    val p1: int = 1;
    (p1: unit);

    fun inner(p1: string) {
      (p1: unit);
      (p1: int);
      (p1: string);
    }
  }
}

fun main() {}